--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   flutter_screenutil: ^5.9.3
   html: ^0.15.5
   url_launcher: ^6.3.1
+  flutter_downloader: ^1.11.7
+  permission_handler: ^11.2.1
+  go_router: ^15.1.1
+
+  flutter_inappwebview: ^6.1.5
   wave: ^0.2.2
 
 dev_dependencies:
