--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: nriweb
-description: "A new Flutter project."
+description: "WorkPal - Connect with skilled artisans, view their work, and hire them for your projects."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -50,22 +50,22 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/NriMainLogo.png"
+  image_path: "assets/images/AppIconn.png"
   min_sdk_android: 23
-  adaptive_icon_foreground: "assets/images/NriMainLogo.png"
+  adaptive_icon_foreground: "assets/images/AppIconn.png"
   adaptive_icon_background: "#FE724C"
   web:
     generate: true
-    image_path: "assets/images/NriMainLogo.png"
+    image_path: "assets/images/AppIconn.png"
     background_color: "#FE724C"
     theme_color: "#FE724C"
   windows:
     generate: true
-    image_path: "assets/images/NriMainLogo.png"
+    image_path: "assets/images/AppIconn.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/images/NriMainLogo.png"
+    image_path: "assets/images/AppIconn.png"
   flutter_test:
     sdk: flutter
 
