Fix vercel deployment config

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
+    "buildCommand": "flutter build web",
+    "outputDirectory": "build/web",
     "rewrites": [
-        { "source": "/(.*)", "destination": "/" }
+        { "source": "/(.*)", "destination": "/index.html" }
     ]
 }
