--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
     "rewrites": [{
-        "source": "/(.*)",
+        "source": "/.*",
         "destination": "/index.html"
+    }],
+    "headers": [{
+        "source": "/(.*)",
+        "headers": [{
+            "key": "Cache-Control",
+            "value": "public, max-age=3600"
+        }]
     }]
 }
